# rust65

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: bus.rs  cpu.rs  main.rs  mem.rs  op.rs  terminal.rs
