[package]
name = "rust65"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
text_io = "0.1.10"
spin_sleep = "1.1.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf"]