[package]
name = "rust65"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
text_io = "0.1.10"
spin_sleep = "1.1.0"
config = "0.13.4"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf"]